[package]
name = "mvutils"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
rust-version = "1.69.0"
authors = [
    "Maxim Savenkov",
    "Julian Hohenhausen"
]
repository = "https://github.com/TeamMV/MVUtils"
keywords = [
    "utils",
    "mvteam",
    "mvutils"
]
categories = [
    "utils"
]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
debug = false

[dependencies]
bytebuffer = "2.1.1"
num-traits = "0.2.15"
