[package]
name = "mvutils"
version = "1.4.5"
edition = "2021"
license-file = "LICENSE"
rust-version = "1.75.0"
authors = [
    "Maxim Savenkov",
    "Julian Hohenhausen"
]
repository = "https://github.com/TeamMV/MVUtils"
keywords = [
    "utils",
    "mvteam",
    "mvutils"
]
description = "A utility crate made from commonly used functions in my projects."


[profile.release]
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1
debug = false

[features]
savable_arc = []
save_str = []

[dependencies]
bytebuffer = "2.3.0"
num-traits = "0.2.19"
mvutils-proc-macro = { path = "./Proc", version = "1.1.2" }
hashbrown = "0.15.0"
parking_lot = "0.12.3"
