[package]
name = "mvutils-proc-macro"
version = "0.3.2"
edition = "2021"
license-file = "LICENSE"
rust-version = "1.69.0"
authors = [
    "Maxim Savenkov",
    "Julian Hohenhausen"
]
repository = "https://github.com/TeamMV/MVUtils"
keywords = [
    "utils",
    "mvteam",
    "mvutils"
]
categories = [
    "utils"
]
description = "Procedural macros for MVUtils"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.29"
syn = "2.0.22"
proc-macro2 = "1.0"