[package]
name = "mvutils-proc-macro"
version = "0.3.3"
edition = "2021"
license-file = "LICENSE"
rust-version = "1.75.0"
authors = [
    "Maxim Savenkov",
    "Julian Hohenhausen"
]
repository = "https://github.com/TeamMV/MVUtils"
keywords = [
    "utils",
    "mvteam",
    "mvutils"
]
categories = []
description = "Procedural macros for MVUtils"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.29"
syn = { version = "2.0.22", features = ["full"] }
proc-macro2 = "1.0"
